--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -7,12 +7,14 @@ jobs:
         matrix:
           compiler: [gcc, clang]
     runs-on: ubuntu-18.04
+    container:
+      image: docker://ubuntu:18.0.4
     steps:
       - uses: actions/checkout@v1
       - name: Build srsLTE on x86 Ubuntu 18.04
         run: |
-          sudo apt update
-          sudo apt install -y build-essential cmake libfftw3-dev libmbedtls-dev libpcsclite-dev libboost-program-options-dev libconfig++-dev libsctp-dev colordiff ninja-build valgrind
+          apt update
+          apt install -y build-essential cmake libfftw3-dev libmbedtls-dev libpcsclite-dev libboost-program-options-dev libconfig++-dev libsctp-dev colordiff ninja-build valgrind
           mkdir build && cd build && cmake -DRF_FOUND=True -GNinja .. && ninja && ctest -T memcheck
   x86_ubuntu16_build:
     name: Build and test on x86 Ubuntu 16.04
@@ -20,12 +22,14 @@ jobs:
         matrix:
           compiler: [gcc, clang]
     runs-on: ubuntu-16.04
+    container:
+      image: docker://ubuntu:16.0.4
     steps:
       - uses: actions/checkout@v1
       - name: Build srsLTE on x86 Ubuntu 16.04
         run: |
-          sudo apt update
-          sudo apt install -y build-essential cmake libfftw3-dev libmbedtls-dev libpcsclite-dev libboost-program-options-dev libconfig++-dev libsctp-dev colordiff ninja-build valgrind
+          apt update
+          apt install -y build-essential cmake libfftw3-dev libmbedtls-dev libpcsclite-dev libboost-program-options-dev libconfig++-dev libsctp-dev colordiff ninja-build valgrind
           mkdir build && cd build && cmake -DRF_FOUND=True -GNinja .. && ninja && ctest -T memcheck
           
   aarch64_ubuntu18_build:
